--- a/email-writer-react/index.html
+++ b/email-writer-react/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="1ca3161144223e640e42d220aa896747.jpg" />
+    <link rel="icon" type="image" href="logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ReplAI</title>
   </head>
